jenerated first draft
